trying to fix post card line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,7 @@ nav a:hover::after {
     font-weight: 500;
     font-size: 1.4rem;
     margin-bottom: 0.5rem;
+    line-height: 1.3;
     color: var(--rust-red);
 }
 
